--- a/.github/workflows/run_test 1.yml
+++ b/.github/workflows/run_test 1.yml
@@ -40,6 +40,27 @@ jobs:
         dotnet user-secrets set "Sekiban:Secondary:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Default:CosmosDbDatabase" "GithubActions"
         dotnet user-secrets set "Sekiban:Secondary:CosmosDbDatabase" "GithubActions"
+    - name: Secret Settings Dynamo
+      run: |
+        pushd ./test/Sekiban.Test.Dynamo
+        dotnet user-secrets set "Sekiban:Default:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
+        dotnet user-secrets set "Sekiban:Default:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbRegion" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTable" "jjga_items"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTable" "jjga_events"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTableDissolvable" "jjga_d_items"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTableDissolvable" "jjga_d_events"
+        dotnet user-secrets set "Sekiban:Default:S3Region" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Default:S3BucketName" "jjga-files"
+        dotnet user-secrets set "Sekiban:Default:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
+        dotnet user-secrets set "Sekiban:Default:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbRegion" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTable" "jjga_items_2"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTable" "jjga_events_2"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTableDissolvable" "jjga_d_items_2"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTableDissolvable" "jjga_d_events_2"
+        dotnet user-secrets set "Sekiban:Default:S3Region" "ap-northeast-1_2"
+        dotnet user-secrets set "Sekiban:Default:S3BucketName" "jjga-files_2"
     - name: Restore dependencies
       run: |
         dotnet restore Sekiban.sln
@@ -85,14 +106,25 @@ jobs:
     - name: Secret Settings Dynamo
       run: |
         pushd ./test/Sekiban.Test.Dynamo
-        dotnet user-secrets set "Sekiban:Default:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
-        dotnet user-secrets set "Sekiban:Default:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
-        dotnet user-secrets set "Sekiban:Default:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
-        dotnet user-secrets set "Sekiban:Secondary:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
-        dotnet user-secrets set "Sekiban:Default:CosmosDbDatabase" "GithubActions"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbDatabase" "GithubActions"    - name: Restore dependencies
+        dotnet user-secrets set "Sekiban:Default:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
+        dotnet user-secrets set "Sekiban:Default:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbRegion" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTable" "jjga_items"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTable" "jjga_events"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTableDissolvable" "jjga_d_items"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTableDissolvable" "jjga_d_events"
+        dotnet user-secrets set "Sekiban:Default:S3Region" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Default:S3BucketName" "jjga-files"
+        dotnet user-secrets set "Sekiban:Default:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
+        dotnet user-secrets set "Sekiban:Default:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbRegion" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTable" "jjga_items_2"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTable" "jjga_events_2"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTableDissolvable" "jjga_d_items_2"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTableDissolvable" "jjga_d_events_2"
+        dotnet user-secrets set "Sekiban:Default:S3Region" "ap-northeast-1_2"
+        dotnet user-secrets set "Sekiban:Default:S3BucketName" "jjga-files_2"
+    - name: Restore dependencies
       run: |
         dotnet restore Sekiban.sln
     - name: Build with dotnet
@@ -138,6 +170,27 @@ jobs:
         dotnet user-secrets set "Sekiban:Secondary:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Default:CosmosDbDatabase" "GithubActions"
         dotnet user-secrets set "Sekiban:Secondary:CosmosDbDatabase" "GithubActions"
+    - name: Secret Settings Dynamo
+      run: |
+        pushd ./test/Sekiban.Test.Dynamo
+        dotnet user-secrets set "Sekiban:Default:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
+        dotnet user-secrets set "Sekiban:Default:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbRegion" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTable" "jjga_items"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTable" "jjga_events"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTableDissolvable" "jjga_d_items"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTableDissolvable" "jjga_d_events"
+        dotnet user-secrets set "Sekiban:Default:S3Region" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Default:S3BucketName" "jjga-files"
+        dotnet user-secrets set "Sekiban:Default:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
+        dotnet user-secrets set "Sekiban:Default:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbRegion" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTable" "jjga_items_2"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTable" "jjga_events_2"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTableDissolvable" "jjga_d_items_2"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTableDissolvable" "jjga_d_events_2"
+        dotnet user-secrets set "Sekiban:Default:S3Region" "ap-northeast-1_2"
+        dotnet user-secrets set "Sekiban:Default:S3BucketName" "jjga-files_2"
     - name: Restore dependencies
       run: |
         dotnet restore Sekiban.sln
