--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -12,7 +12,7 @@ concurrency:
   group: CosmosDbConnect
   cancel-in-progress: false
 jobs:
-  regular:
+  regular70:
     strategy:
       max-parallel: 1
     runs-on: ubuntu-latest
@@ -60,16 +60,70 @@ jobs:
         dotnet restore Sekiban.sln
     - name: Test dotnet
       run: |
-        dotnet test Sekiban.sln  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1
+        dotnet test Sekiban.sln  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net7.0
     - uses: mktcode/consecutive-workflow-action@v1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
+  regular80:
+    strategy:
+      max-parallel: 1
+    runs-on: ubuntu-latest
+    needs: [ regular70 ]
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup .NET 8
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 8.0.100-rc.1.23455.8
+    - name: Setup .NET 7
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 7.0.x
+    - name: Secret Settings
+      run: |
+        pushd ./test/Sekiban.Test.CosmosDb
+        dotnet user-secrets set "Sekiban:Default:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
+        dotnet user-secrets set "Sekiban:Default:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
+        dotnet user-secrets set "Sekiban:Default:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
+        dotnet user-secrets set "Sekiban:Secondary:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
+        dotnet user-secrets set "Sekiban:Secondary:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
+        dotnet user-secrets set "Sekiban:Secondary:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
+        dotnet user-secrets set "Sekiban:Default:CosmosDbDatabase" "GithubActions"
+        dotnet user-secrets set "Sekiban:Secondary:CosmosDbDatabase" "GithubActions"
+        dotnet user-secrets set "Sekiban:Default:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
+        dotnet user-secrets set "Sekiban:Default:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbRegion" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTable" "jjga_items"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTable" "jjga_events"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTableDissolvable" "jjga_d_items"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTableDissolvable" "jjga_d_events"
+        dotnet user-secrets set "Sekiban:Default:S3Region" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Default:S3BucketName" "jjga-files"
+        dotnet user-secrets set "Sekiban:Secondary:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
+        dotnet user-secrets set "Sekiban:Secondary:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbRegion" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTable" "jjga_items_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTable" "jjga_events_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTableDissolvable" "jjga_d_items_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTableDissolvable" "jjga_d_events_2"
+        dotnet user-secrets set "Sekiban:Secondary:S3Region" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Secondary:S3BucketName" "jjga-files"        
+    - name: Restore dependencies
+      run: |
+        dotnet restore Sekiban.sln
+    - name: Test dotnet
+      run: |
+        dotnet test Sekiban.sln  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net7.0
+    - uses: mktcode/consecutive-workflow-action@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+      
   flaky:
     strategy:
       max-parallel: 1
 
     runs-on: ubuntu-latest
-    needs: [ regular ]
+    needs: [ regular80 ]
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET 8
