--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -286,7 +286,7 @@ jobs:
       max-parallel: 1
 
     runs-on: ubuntu-latest
-    needs: [ performance80 ]
+    needs: [ flaky ]
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET 8
