--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -14,7 +14,7 @@ concurrency:
 jobs:
   regular70:
     strategy:
-      max-parallel: 1
+      max-parallel: 2
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -66,9 +66,8 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
   regular80:
     strategy:
-      max-parallel: 1
+      max-parallel: 2
     runs-on: ubuntu-latest
-    needs: [ regular70 ]
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET 8
@@ -88,24 +87,24 @@ jobs:
         dotnet user-secrets set "Sekiban:Secondary:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
         dotnet user-secrets set "Sekiban:Secondary:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
         dotnet user-secrets set "Sekiban:Secondary:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
-        dotnet user-secrets set "Sekiban:Default:CosmosDbDatabase" "GithubActions"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbDatabase" "GithubActions"
+        dotnet user-secrets set "Sekiban:Default:CosmosDbDatabase" "GithubActions8"
+        dotnet user-secrets set "Sekiban:Secondary:CosmosDbDatabase" "GithubActions8"
         dotnet user-secrets set "Sekiban:Default:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
         dotnet user-secrets set "Sekiban:Default:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
         dotnet user-secrets set "Sekiban:Default:DynamoDbRegion" "us-west-1"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTable" "jjga_items"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTable" "jjga_events"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTableDissolvable" "jjga_d_items"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTableDissolvable" "jjga_d_events"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTable" "8_jjga_items"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTable" "8_jjga_events"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTableDissolvable" "8_jjga_d_items"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTableDissolvable" "8_jjga_d_events"
         dotnet user-secrets set "Sekiban:Default:S3Region" "us-west-1"
         dotnet user-secrets set "Sekiban:Default:S3BucketName" "jjga-s3"
         dotnet user-secrets set "Sekiban:Secondary:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
         dotnet user-secrets set "Sekiban:Secondary:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
         dotnet user-secrets set "Sekiban:Secondary:DynamoDbRegion" "us-west-1"
-        dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTable" "jjga_items_2"
-        dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTable" "jjga_events_2"
-        dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTableDissolvable" "jjga_d_items_2"
-        dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTableDissolvable" "jjga_d_events_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTable" "8_jjga_items_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTable" "8_jjga_events_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTableDissolvable" "8_jjga_d_items_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTableDissolvable" "8_jjga_d_events_2"
         dotnet user-secrets set "Sekiban:Secondary:S3Region" "us-west-1"
         dotnet user-secrets set "Sekiban:Secondary:S3BucketName" "jjga-s3"        
     - name: Restore dependencies
@@ -120,10 +119,10 @@ jobs:
       
   flaky:
     strategy:
-      max-parallel: 1
+      max-parallel: 4
 
     runs-on: ubuntu-latest
-    needs: [ regular80 ]
+    needs: [ regular70, regular80 ]
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET 8
@@ -179,7 +178,7 @@ jobs:
 
   performance70:
     strategy:
-      max-parallel: 1
+      max-parallel: 4
 
     runs-on: ubuntu-latest
     needs: [ flaky ]
@@ -231,10 +230,10 @@ jobs:
 
   performance80:
     strategy:
-      max-parallel: 1
+      max-parallel: 4
 
     runs-on: ubuntu-latest
-    needs: [ performance70 ]
+    needs: [ flaky ]
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET 8
@@ -254,8 +253,8 @@ jobs:
         dotnet user-secrets set "Sekiban:Secondary:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
         dotnet user-secrets set "Sekiban:Secondary:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
         dotnet user-secrets set "Sekiban:Secondary:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
-        dotnet user-secrets set "Sekiban:Default:CosmosDbDatabase" "GithubActions"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbDatabase" "GithubActions"
+        dotnet user-secrets set "Sekiban:Default:CosmosDbDatabase" "GithubActions8"
+        dotnet user-secrets set "Sekiban:Secondary:CosmosDbDatabase" "GithubActions8"
         dotnet user-secrets set "Sekiban:Default:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
         dotnet user-secrets set "Sekiban:Default:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
         dotnet user-secrets set "Sekiban:Default:DynamoDbRegion" "us-west-1"
@@ -283,7 +282,7 @@ jobs:
 
   performance70dynamo:
     strategy:
-      max-parallel: 1
+      max-parallel: 4
 
     runs-on: ubuntu-latest
     needs: [ flaky ]
@@ -338,7 +337,7 @@ jobs:
       max-parallel: 1
 
     runs-on: ubuntu-latest
-    needs: [ performance70dynamo ]
+    needs: [ flaky ]
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET 8
@@ -363,19 +362,19 @@ jobs:
         dotnet user-secrets set "Sekiban:Default:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
         dotnet user-secrets set "Sekiban:Default:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
         dotnet user-secrets set "Sekiban:Default:DynamoDbRegion" "us-west-1"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTable" "jjga_items"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTable" "jjga_events"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTableDissolvable" "jjga_d_items"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTableDissolvable" "jjga_d_events"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTable" "8_jjga_items"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTable" "8_jjga_events"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTableDissolvable" "8_jjga_d_items"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTableDissolvable" "8_jjga_d_events"
         dotnet user-secrets set "Sekiban:Default:S3Region" "us-west-1"
         dotnet user-secrets set "Sekiban:Default:S3BucketName" "jjga-s3"
         dotnet user-secrets set "Sekiban:Secondary:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
         dotnet user-secrets set "Sekiban:Secondary:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
         dotnet user-secrets set "Sekiban:Secondary:DynamoDbRegion" "us-west-1"
-        dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTable" "jjga_items_2"
-        dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTable" "jjga_events_2"
-        dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTableDissolvable" "jjga_d_items_2"
-        dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTableDissolvable" "jjga_d_events_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTable" "8_jjga_items_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTable" "8_jjga_events_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTableDissolvable" "8_jjga_d_items_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTableDissolvable" "8_jjga_d_events_2"
         dotnet user-secrets set "Sekiban:Secondary:S3Region" "us-west-1"
         dotnet user-secrets set "Sekiban:Secondary:S3BucketName" "jjga-s3"
     - name: Restore dependencies
