--- a/src/Sekiban.Infrastructure.Cosmos/Sekiban.Infrastructure.Cosmos.csproj
+++ b/src/Sekiban.Infrastructure.Cosmos/Sekiban.Infrastructure.Cosmos.csproj
@@ -4,13 +4,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackageId>Sekiban.Infrastructure.Cosmos</PackageId>
-        <Version>0.15.5</Version>
+        <Version>0.16.0</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework CosmosInfrastructure</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>0.15.5</PackageVersion>
-        <Description>appsettins.json improvement</Description>
+        <PackageVersion>0.16.0</PackageVersion>
+        <Description>Improved DI Initialization</Description>
         <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
         <LangVersion>preview</LangVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
